--- a/css/style.css
+++ b/css/style.css
@@ -7126,7 +7126,8 @@ html:not(.tablet):not(.mobile) .profile-minimal-caption {
 
 @media (max-width: 767.98px) {
 	.jumbotron-classic-content {
-		padding: 60px 0 80px  0;
+		margin-top: 30px;
+		/* padding: 60px 0 80px  0; */
 	}
 }
 
@@ -11079,7 +11080,7 @@ html.rd-navbar-fixed-linked .page {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 30px 0 40px;
+	/* padding: 30px 0 40px; */
 }
 
 .rd-navbar-corporate.rd-navbar-static .rd-navbar-main-outer {
@@ -18044,3 +18045,88 @@ body{
     }
 }
 
+.our-services .services-left-dec img {
+	width: 387px;
+	height: 638px;
+	left: -80px;
+	top: -140px;
+	position: absolute;
+	z-index: 1;
+  }
+  
+  .our-services .services-right-dec img {
+	width: 305px;
+	height: 305px;
+	right: 25px;
+	bottom: -120px;
+	position: absolute;
+	z-index: 1;
+  }
+  
+  .our-services .container {
+	position: relative;
+  }
+  
+  .our-services {
+	position: relative;
+	margin-top: 0px;
+	padding-top: 120px;
+  }
+  
+  .our-services .section-heading {
+	text-align: center;
+	margin-bottom: 45px;
+  }
+  
+  .our-services .section-heading h2 {
+	margin: 0px 60px;
+	margin-bottom: -10px;
+  }
+  
+  .our-services .item {
+	text-align: center;
+	margin: 15px;
+	border-radius: 20px;
+	background-color: #fff;
+	padding: 30px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.05);
+  }
+  
+  .our-services .item h4 {
+	font-size: 20px;
+	font-weight: 700;
+	color: #2a2a2a;
+	margin-bottom: 30px;
+	line-height: 30px;
+  }
+  
+  .our-services .item .icon {
+	width: 45px;
+	height: 45px;
+	margin: 0 auto;
+  }
+  
+  .our-services .item p {
+	margin-top: 35px;
+	padding-top: 30px;
+	border-top: 1px solid #eee;
+  }
+  
+  .our-services .owl-dots {
+	text-align: center;
+	margin-top: 40px;
+  }
+  .our-services .owl-dots .owl-dot {
+	width: 6px;
+	height: 6px;
+	background-color: #ff695f;
+	border-radius: 50%;
+	opacity: 0.3;
+	margin: 0px 5px;
+  }
+  
+  .our-services .owl-dots .active {
+	opacity: 1;
+	width: 10px;
+	height: 10px;
+  }
