--- a/css/style.css
+++ b/css/style.css
@@ -6954,6 +6954,10 @@ html:not(.tablet):not(.mobile) .profile-minimal-caption {
 		margin-left: auto;
 		margin-right: auto;
 	}
+	.jumbotron-classic-content {
+		margin-top: 30px;
+		/* padding: 60px 0 80px  0; */
+	}
 }
 
 @media (min-width: 768px) {
