--- a/css/style.css
+++ b/css/style.css
@@ -7141,7 +7141,7 @@ html:not(.tablet):not(.mobile) .profile-minimal-caption {
 @media (max-width: 767.98px) {
 	.jumbotron-classic-content {
 		margin-top: 30px;
-		/* padding: 60px 0 80px  0; */
+		 padding: 190px 0 80px  0; 
 	}
 }
 
