--- a/css/style.css
+++ b/css/style.css
@@ -7134,14 +7134,14 @@ html:not(.tablet):not(.mobile) .profile-minimal-caption {
 
 @media (max-width: 1599.98px) {
 	.jumbotron-classic-content {
-		padding: 120px 0;
+		padding: 140px 0;
 	}
 }
 
 @media (max-width: 767.98px) {
 	.jumbotron-classic-content {
 		margin-top: 30px;
-		 padding: 60px 0 80px  0; 
+		 /* padding: 60px 0 80px  0;  */
 	}
 }
 
