--- a/css/style.css
+++ b/css/style.css
@@ -10029,7 +10029,7 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-navbar-brand {
 	position: relative;
 	top: -2px;
-	margin-left: 12px;
+	margin-left: 90px;
 	font-size: 0;
 	line-height: 0;
 	text-align: left;
@@ -10037,7 +10037,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar-fixed .rd-navbar-brand img {
 	max-width: 90px;
-	max-height: 58px;
+	/* max-height: 58px; */
 	width: auto;
 	height: auto;
 }
