--- a/css/style.css
+++ b/css/style.css
@@ -17793,9 +17793,9 @@ html[data-x-mode]:not(.lt-ie10) .not-animated {
     padding-bottom: 100px;
 }
 
-.section-services .header-section {
+/* .section-services .header-section {
 	margin-bottom: 34px;
-}
+} */
 
 .section-services .header-section .title {
 	position: relative;
