--- a/css/style.css
+++ b/css/style.css
@@ -17908,7 +17908,7 @@ html[data-x-mode]:not(.lt-ie10) .not-animated {
 
 .section-services .single-service:hover .icon {
 	background-color: #fff;
-	color: #ff4500;
+	color: black;
 }
 
 .section-services .single-service .title {
@@ -17952,7 +17952,7 @@ html[data-x-mode]:not(.lt-ie10) .not-animated {
 	left: 0;
 	right: 0;
 	height: 1px;
-	background-color: #ff4500;
+	background-color: black;
 	transition: background-color .3s;
 }
 
