--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ button:focus {
 	outline: none !important;
 }
 body {
-	background-color: #000;
+	background-color: #183449 !important;
 }
 
 button::-moz-focus-inner {
@@ -107,6 +107,7 @@ body {
 	-webkit-text-size-adjust: none;
 	-webkit-font-smoothing: subpixel-antialiased;
 	letter-spacing: .03em;
+	background-color: #183449 ;
 }
 
 @media (min-width: 768px) {
@@ -583,6 +584,7 @@ a:hover {
 
 a[href*='tel'], a[href*='mailto'] {
 	white-space: nowrap;
+	color: white
 }
 
 .link-hover {
@@ -1868,7 +1870,7 @@ img {
 	text-align: center;
 	border-radius: 50%;
 	border: 1px solid #e8e9ee;
-	color: #151515;
+	color: white;
 }
 
 .icon-circle {
@@ -2201,7 +2203,7 @@ html .button.button-primary-lighten:hover, html .button.button-primary-lighten:a
 	display: inline-block;
 	vertical-align: middle;
 	text-align: center;
-	background: black;
+	/* background: black; */
 	color: white;
 }
 
@@ -9613,6 +9615,7 @@ html.tablet .ui-to-top {
 .rd-navbar-static {
 	display: block;
 	position: relative;
+	background-color: #183449;
 }
 
 .rd-navbar-static .rd-nav-item {
@@ -17807,7 +17810,7 @@ html[data-x-mode]:not(.lt-ie10) .not-animated {
 
 .section-services {
 	font-family: "Poppins", sans-serif;
-	background-color: #e6edf7;
+	/* background-color: #e6edf7; */
 	color: #202020;
 	padding-top: 70px;
     padding-bottom: 100px;
